# ComfyUI_OmniParser

./: OmniParser_node.py  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py  workflow.json
OmniParser/: omniparser.py  utils.py
OmniParser/blip2-opt-2.7b/: README.md  model.safetensors.index.json  tokenizer_config.json
OmniParser/weights/: convert_safetensor_to_pt.py
