[project]
name = "comfyui_omniparser"
description = "Try OmniParser in ComfyUI which a simple screen parsing tool towards pure vision based GUI agent."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["#torch", "easyocr", "#torchvision", "#supervision==0.18.0", "supervision", "#openai==1.3.5", "#transformers", "#ultralytics==8.1.24", "#azure-identity", "#numpy", "opencv-python", "opencv-python-headless", "#gradio", "dill", "#accelerate", "#timm", "#einops==0.8.0", "#paddlepaddle", "#paddleocr"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_OmniParser"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_OmniParser"
Icon = ""
